--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,22 @@
 {
   "name": "server",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "serve": "nodemon index.js"
   },
+  "keywords": [],
+  "author": "zhulm",
+  "license": "ISC",
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "http-assert": "^1.4.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^5.7.7",
     "morgan": "~1.9.1"
   }
 }
